--- a/404.md
+++ b/404.md
@@ -1,3 +1,7 @@
+---
+permalink: /404.html
+---
+
 Hello,
 This is a range rover p38 rave collection from rave file. 
 IS SERVED AS IS, and sometimes contains errors with strange elements. I made that in my free time so don't expect a lot, but it should be enough to help you during travel, or on your mobile phone. Search don't work perfectly in html files, but i just converted pdfs to html. Search should  work correctly to pdf files.
